--- a/CustomerService/Masterstyle.css
+++ b/CustomerService/Masterstyle.css
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: Dubai, sans-serif;
+    font-family: Calibri;
 }
 
 nav {
